Fix mobile wrap

--- a/resources/scss/elements/_typography.scss
+++ b/resources/scss/elements/_typography.scss
@@ -118,18 +118,21 @@ h1 {
 	color: rgba(32,32,32,1) !important;
 	font-weight: 500 !important;
 	font-size: 28px !important;
+	line-height: 1.2 !important;
 }
 
 h2 {
 	color: rgba(32,32,32,1) !important;
 	font-weight: 500 !important;
 	font-size: 22px !important;
+	line-height: 1.2 !important;
 }
 
 h6 {
 	color: rgba(32,32,32,.75) !important;
 	text-transform: uppercase !important;
 	font-size: 16px !important;
+	line-height: 1.2 !important;
 }
 
 p {
