--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ h1 {
 	font-size: 28px !important;
 	font-size: 2.8rem !important;
 	font-weight: 500 !important;
+	line-height: 1.2 !important;
 	}
 
 h2 {
@@ -316,12 +317,14 @@ h2 {
 	font-size: 22px !important;
 	font-size: 2.2rem !important;
 	font-weight: 500 !important;
+	line-height: 1.2 !important;
 	}
 
 h6 {
 	color: rgba(32, 32, 32, 0.75) !important;
 	font-size: 16px !important;
 	font-size: 1.6rem !important;
+	line-height: 1.2 !important;
 	text-transform: uppercase !important;
 	}
 
@@ -1943,6 +1946,13 @@ section[data-id="f9d9ae1"] img[title="Logos@4x"] {
 	.first {
 		clear: both;
 		margin-left: 0;
+		}
+	}
+
+@media (max-width: 767px) {
+	.elementor-column-wrap.elementor-element-populated {
+		margin: 0 auto !important;
+		max-width: 90% !important;
 		}
 	}
 
